# code-review-agent

./: .breview.yml  .breview.yml.example  .gitignore  CHAT_TRANSCRIPT.md  CODING_STANDARD.md  PROJECT_SUMMARY.md  README.md  REQUIREMENTS.md  TASKBOARD.md  TEST_PLAN.md  TODO.md  debug_llm.py  debug_llm_raw.py  debug_llm_test.py  debug_review_test.py  environment.yml  example_code.py  pyproject.toml  review_output.txt  setup.bat  setup.ps1
.github/workflows/: breview.yml
breview/: __init__.py
breview/agents/: __init__.py  base.py  code_review_agent.py  context_agent.py  knowledge_agent.py  orchestrator.py  report_agent.py  safety_agent.py  style_agent.py
breview/cli/: __init__.py  hooks.py  main.py
breview/config/: __init__.py  loader.py  schema.py
breview/context/: __init__.py  builder.py
breview/cost/: __init__.py  monitor.py
breview/degradation/: __init__.py  manager.py
breview/diff/: __init__.py  parser.py
breview/false_positive/: __init__.py  filter.py  store.py
breview/github/: __init__.py  app.py  dedup.py  incremental.py  notification.py  publisher.py  status.py  webhook.py
breview/index/: __init__.py
breview/infra/: __init__.py  audit.py  exemption.py  ratelimit.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_context.py  test_cost.py  test_diff_parser.py  test_false_positive.py  test_github.py  test_github_publisher.py  test_infra.py  test_knowledge.py  test_linter.py  test_llm_client.py  test_llm_parser.py  test_models.py  test_orchestrator.py  test_profiles.py  test_report.py  test_roles.py
(+22 files in other folders)
